--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -2168,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "a7e9e481-7211-4492-b2e6-164026826ece",
    "metadata": {
     "tags": []
@@ -2188,17 +2188,22 @@
     "    seed: int, defaut=123\n",
     "        - optional, a seed value to maintain consistency\n",
     "    \"\"\"\n",
+    "    parameters={\n",
+    "        'random_state':123,\n",
+    "        'split_1':0.6,\n",
+    "        'split_2':\n",
+    "    }\n",
     "    # run first split\n",
     "    train, validate_test = train_test_split(\n",
     "        df,\n",
-    "        train_size = 0.5,\n",
+    "        train_size = 0.6,\n",
     "        random_state = 123\n",
     "    )\n",
     "    \n",
     "    # run second split\n",
     "    validate, test = train_test_split(\n",
     "        df,\n",
-    "        train_size = 0.6,\n",
+    "        train_size = 0.5,\n",
     "        random_state = 123\n",
     "    )\n",
     "    \n",
@@ -2345,7 +2350,7 @@
    "outputs": [],
    "source": [
     "write_contents.append('''\n",
-    "def split_continuous(df,seed=123):\n",
+    "def split_continuous(df,seed=123,**kwargs):\n",
     "    \"\"\"\n",
     "    Returns three dataframes split from one for use in model training, validation, and testing. \n",
     "    \n",
@@ -2361,14 +2366,14 @@
     "    # run first split\n",
     "    train, validate_test = train_test_split(\n",
     "        df,\n",
-    "        train_size = 0.5,\n",
+    "        train_size = 0.6,\n",
     "        random_state = 123\n",
     "    )\n",
     "    \n",
     "    # run second split\n",
     "    validate, test = train_test_split(\n",
     "        df,\n",
-    "        train_size = 0.6,\n",
+    "        train_size = 0.5,\n",
     "        random_state = 123\n",
     "    )\n",
     "    \n",
