continued work on scaling exercises

--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -102,12 +102,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "365af2ff-508a-47dd-97ca-2e43a21c79f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nunique</th>\n",
+       "      <th>dtypes</th>\n",
+       "      <th>isnull</th>\n",
+       "      <th>1511532</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bedrooms</th>\n",
+       "      <td>17</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bathrooms</th>\n",
+       "      <td>37</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>property_area</th>\n",
+       "      <td>9540</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>property_value</th>\n",
+       "      <td>446402</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>541300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yearbuilt</th>\n",
+       "      <td>149</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>taxamount</th>\n",
+       "      <td>707961</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6623.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fips</th>\n",
+       "      <td>3</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>county</th>\n",
+       "      <td>3</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                nunique   dtypes  isnull      1511532\n",
+       "bedrooms             17    int64       0            3\n",
+       "bathrooms            37  float64       0          3.0\n",
+       "property_area      9540    int64       0         2793\n",
+       "property_value   446402    int64       0       541300\n",
+       "yearbuilt           149    int64       0         1941\n",
+       "taxamount        707961  float64       0      6623.92\n",
+       "fips                  3    int64       0         6037\n",
+       "county                3   object       0  Los Angeles"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# check the data\n"
+    "# check the data\n",
+    "w.df_info(train)"
    ]
   },
   {
@@ -120,11 +226,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "43a3cafb-a4a8-40a0-bbd8-f3c1c81e14ce",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# apply the MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0c87b2fc-8449-493a-8b15-d14b8dcab368",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# apply the StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9c4d315-c56e-4c8a-89cc-e29843f3e472",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# apply the RobustScaler"
+   ]
   },
   {
    "cell_type": "markdown",
